--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 
         <title>tldr;</title>
 
-        <link rel="icon" type="image/png" href="img/portfolio/as-min.png">
+        <link rel="icon" type="image/png" href="img/tldr-min.png">
 
         <!-- Bootstrap Core CSS -->
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
